feat(项目)：gradle版本的统一管理：版本号放在app_config中，业务module的gradle放在lib_module，因为都差不多，直接复用

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -3,17 +3,17 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion lib_android.compileSdkVersion
+    buildToolsVersion lib_android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion lib_android.minSdkVersion
+        targetSdkVersion lib_android.targetSdkVersion
+        versionCode lib_android.versionCode
+        versionName lib_android.versionName
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
+        testInstrumentationRunner lib_android.testInstrumentationRunner
+        consumerProguardFiles lib_android.consumerProguardFiles
     }
 
     buildTypes {
@@ -26,11 +26,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    base_dependencies.each {key,value->
+        api value
+    }
 }
