feat(项目)：设置业务module的状态标志；设置业务module不同状态的清单文件；增加每个业务module调试页面；

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -26,5 +26,8 @@ android {
 }
 
 dependencies {
+    base_dependencies.forEach{key,value->
+        api value
+    }
     implementation project(path:':base')
 }
