--- a/detail/src/main/java/debug/AndroidManifest.xml
+++ b/detail/src/main/java/debug/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zhengyinuo.list">
+    package="com.zhengyinuo.detail">
 
-    <application>
-        <activity android:name="debug.TestListActivity">
+    <application
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        <activity android:name=".DetailActivity"/>
+        <activity android:name="debug.TestDetailActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ListActivity" />
     </application>
 
 </manifest>
