--- a/script/app_config.gradle
+++ b/script/app_config.gradle
@@ -1,4 +1,8 @@
 ext{
+
+    //业务层module的类型 true代表以app存在（开发阶段）  false代表以library存在（测试阶段）
+    is_app = false
+
     //系统配置
     lib_android =[
             compileSdkVersion : 29,
@@ -10,6 +14,7 @@ ext{
             testInstrumentationRunner : "androidx.test.runner.AndroidJUnitRunner",
             consumerProguardFiles : 'consumer-rules.pro',
     ]
+
     //业务层
     lib_dependencies = [
             junit : 'junit:junit:4.12',
@@ -22,6 +27,7 @@ ext{
             libs : fileTree(dir: 'libs', include: ['*.jar']),
             kotlin_stdlib : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
             appcompat : 'androidx.appcompat:appcompat:1.1.0',
+            constraintlayout : 'androidx.constraintlayout:constraintlayout:1.1.3',
             ore_ktx : 'androidx.core:core-ktx:1.3.0',
     ]
 }
