--- a/script/lib_module.gradle
+++ b/script/lib_module.gradle
@@ -1,4 +1,8 @@
-apply plugin: 'com.android.library'
+if(is_app){
+    apply plugin: 'com.android.application'
+}else{
+    apply plugin: 'com.android.library'
+}
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
@@ -20,6 +24,19 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    sourceSets{
+        main{
+            if(is_app){
+                manifest.srcFile('src/main/java/debug/AndroidManifest.xml')
+            }else{
+                manifest.srcFile('src/main/AndroidManifest.xml')
+                java{
+                    exclude 'debug/**'
+                }
+            }
         }
     }
 
