feat(首页，列表，详情)：业务逻辑基本处理

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     base_dependencies.forEach{key,value->
         api value
     }
-    implementation project(path:':base')
+    api project(path:':base')
 }
