--- a/list/src/main/java/debug/AndroidManifest.xml
+++ b/list/src/main/java/debug/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zhengyinuo.list"
-    >
+    package="com.zhengyinuo.list">
+
     <application
-        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        android:name="debug.TestListApplication"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name="debug.TestListActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListActivity"/>
+        <activity android:name=".ui.ListActivity" />
     </application>
 </manifest>
