--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zhengyinuo.base" />
+    package="com.zhengyinuo.base">
+
+    <permission android:name="android.permission.INTERNET" />
+</manifest>
