--- a/list/src/main/AndroidManifest.xml
+++ b/list/src/main/AndroidManifest.xml
@@ -2,14 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhengyinuo.list">
 
-    <application>
+    <application android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity android:name="debug.TestListActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListActivity" />
+        <activity android:name=".ui.ListActivity" />
     </application>
 
 </manifest>
