--- a/script/app_config.gradle
+++ b/script/app_config.gradle
@@ -1,33 +1,40 @@
-ext{
+ext {
 
     //业务层module的类型 true代表以app存在（开发阶段）  false代表以library存在（测试阶段）
-    is_app = false
+    is_app = true
 
     //系统配置
-    lib_android =[
-            compileSdkVersion : 29,
-            buildToolsVersion : "29.0.3",
-            minSdkVersion :  16,
-            targetSdkVersion : 29,
-            versionCode : 1,
-            versionName : "1.0",
-            testInstrumentationRunner : "androidx.test.runner.AndroidJUnitRunner",
-            consumerProguardFiles : 'consumer-rules.pro',
+    lib_android = [
+            compileSdkVersion        : 29,
+            buildToolsVersion        : "29.0.3",
+            minSdkVersion            : 17,
+            targetSdkVersion         : 29,
+            versionCode              : 1,
+            versionName              : "1.0",
+            testInstrumentationRunner: "androidx.test.runner.AndroidJUnitRunner",
+            consumerProguardFiles    : 'consumer-rules.pro',
     ]
 
     //业务层
     lib_dependencies = [
-            junit : 'junit:junit:4.12',
-            test_jnit : 'androidx.test.ext:junit:1.1.1',
+            junit    : 'junit:junit:4.12',
+            test_jnit: 'androidx.test.ext:junit:1.1.1',
             espresso : 'androidx.test.espresso:espresso-core:3.2.0',
     ]
 
     //基础层
     base_dependencies = [
-            libs : fileTree(dir: 'libs', include: ['*.jar']),
-            kotlin_stdlib : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
-            appcompat : 'androidx.appcompat:appcompat:1.1.0',
-            constraintlayout : 'androidx.constraintlayout:constraintlayout:1.1.3',
-            ore_ktx : 'androidx.core:core-ktx:1.3.0',
+            libs                         : fileTree(dir: 'libs', include: ['*.jar']),
+            kotlin_stdlib                : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            appcompat                    : 'androidx.appcompat:appcompat:1.1.0',
+            material                     : 'com.google.android.material:material:1.1.0',
+            constraintlayout             : 'androidx.constraintlayout:constraintlayout:1.1.3',
+            ore_ktx                      : 'androidx.core:core-ktx:1.3.0',
+            activity                     : 'androidx.activity:activity-ktx:1.1.0',
+            fragment                     : 'androidx.fragment:fragment-ktx:1.2.4',
+            BaseRecyclerViewAdapterHelper: 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4',
+            banner                       : 'com.youth.banner:banner:2.0.10',
+            glide                        : 'com.github.bumptech.glide:glide:4.11.0',
+            lifecycle                    : 'androidx.lifecycle:lifecycle-extensions:2.2.0',
     ]
 }
