feat(首页，列表，详情)：业务逻辑整理并引入ARouter库

--- a/me/src/main/AndroidManifest.xml
+++ b/me/src/main/AndroidManifest.xml
@@ -6,7 +6,12 @@
     <application>
         <activity
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            android:name=".main.ui.MainActivity"></activity>
+            android:name=".main.ui.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
