--- a/script/app_config.gradle
+++ b/script/app_config.gradle
@@ -36,5 +36,6 @@ ext {
             banner                       : 'com.youth.banner:banner:2.0.10',
             glide                        : 'com.github.bumptech.glide:glide:4.11.0',
             lifecycle                    : 'androidx.lifecycle:lifecycle-extensions:2.2.0',
+            arouter                      : 'com.alibaba:arouter-api:1.5.0',
     ]
 }
