--- a/script/app_config.gradle
+++ b/script/app_config.gradle
@@ -28,6 +28,7 @@ ext {
             kotlin_stdlib                : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
             appcompat                    : 'androidx.appcompat:appcompat:1.1.0',
             material                     : 'com.google.android.material:material:1.1.0',
+            viewpager2                   : 'androidx.viewpager2:viewpager2:1.0.0',
             constraintlayout             : 'androidx.constraintlayout:constraintlayout:1.1.3',
             ore_ktx                      : 'androidx.core:core-ktx:1.3.0',
             activity                     : 'androidx.activity:activity-ktx:1.1.0',
